// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App UI > should render correctly with the prompt input box 1`] = `
"

╭────────────────────────────────────────────────────────────────────────────────────────╮
│ >   Type your message or @path/to/file                                                 │
╰────────────────────────────────────────────────────────────────────────────────────────╯
                                                                 Mem: 8% | Ctx: 0.0k/1049k
/test/dir"
`;

exports[`App UI > should render the initial UI correctly 1`] = `
"
 The first rule of Fight Club is: you do not talk about Fight Club. (esc to cancel, 0s)


                                                                 Mem: 8% | Ctx: 0.0k/1049k
/test/dir"
`;
